fix(pagination): ensure contrasts for focus state to fix #397

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -937,7 +937,7 @@ $pagination-border-width:           $border-width !default;
 $pagination-border-color:           transparent !default;
 
 $pagination-focus-box-shadow:       null !default; // Boosted mod: not used
-$pagination-focus-outline:          $pagination-border-width solid $gray-500 !default; // Boosted mod
+$pagination-focus-outline:          $pagination-border-width solid $black !default; // Boosted mod
 
 $pagination-hover-color:            $black !default;
 $pagination-hover-bg:               $white !default;
